update to index page

--- a/public/index.html
+++ b/public/index.html
@@ -14,13 +14,13 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
+    
         <div class="row">
             <div class="col-md-12">
                 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
                     <a href="#" class="navbar-brand">Meditory</a>
                     <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="navbarNav" aria-controls="navbarNav" aria-expanded="false" 
-                    aria-label="Toggle-Navigation">
+                    data-target="navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle-Navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
 
@@ -63,8 +63,9 @@
                 <div class="centered">
                     Manage all your Medical Inventory one place
                 </div>
-                <a id="continue" href="#" class="btn btn-lg btn-primary">Continue</a>
+                <a id="continue" href="/dashboard" class="btn btn-lg btn-primary">Continue</a>
             </div>
         </div>
+    
     </body>
 </html>
